--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -5,4 +5,6 @@
     <viewmodels:DashBoardVM x:Key="dashBoardVM"></viewmodels:DashBoardVM>
     <viewmodels:LoginVM x:Key="loginVM"></viewmodels:LoginVM>
     <viewmodels:MainViewModel x:Key="mainVM"></viewmodels:MainViewModel>
+    <viewmodels:InvoiceListVM x:Key="invoiceListVM"></viewmodels:InvoiceListVM>
+    <viewmodels:WeddingHallVM x:Key="weddingHallVM"></viewmodels:WeddingHallVM>
 </ResourceDictionary>
