--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -7,4 +7,5 @@
     <viewmodels:MainViewModel x:Key="mainVM"></viewmodels:MainViewModel>
     <viewmodels:InvoiceListVM x:Key="invoiceListVM"></viewmodels:InvoiceListVM>
     <viewmodels:WeddingHallVM x:Key="weddingHallVM"></viewmodels:WeddingHallVM>
+    <viewmodels:WeddingListVM x:Key="weddingListVM"></viewmodels:WeddingListVM>
 </ResourceDictionary>
