--- a/WeddingApp/WeddingApp/Views/AddWeddingHallWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/AddWeddingHallWindow.xaml
@@ -10,6 +10,7 @@
         xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
         Height="600"
         Width="440"
+        DataContext="{StaticResource addHallVM}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -22,7 +23,14 @@
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanMinimize"
+        x:Name="AddHallUC"
         SizeToContent="Height">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                   CommandParameter="{Binding ElementName=AddHallUC}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
             <Grid Margin="10">
@@ -114,6 +122,7 @@
                                         Margin="10,10,20,-18" />
                                 <ComboBox
                                       materialDesign:HintAssist.Hint="Loại sảnh"
+                                    x:Name="comboBoxType"
                                       ItemsSource="{Binding LongListToTestComboVirtualization}"
                                       Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                                     Width="100">
