--- a/WeddingApp/WeddingApp/Views/AddWeddingHallWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/AddWeddingHallWindow.xaml
@@ -69,7 +69,7 @@
                                     VerticalAlignment="Center"
                                     Margin="10,10,20,-18" />
                                 <TextBox
-                                    x:Name="txtFullname"
+                                    x:Name="txtHallname"
                                     TabIndex="2"
                                 materialDesign:HintAssist.Hint="Tên sảnh"
                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
@@ -95,7 +95,7 @@
                                     VerticalAlignment="Center"
                                     Margin="10,10,20,-18" />
                                 <TextBox
-                                    x:Name="txtPhone"
+                                    x:Name="txtMaxtable"
                                     TabIndex="1"
                                 materialDesign:HintAssist.Hint="Số lượng bàn tối đa"
                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
@@ -124,6 +124,7 @@
                                       materialDesign:HintAssist.Hint="Loại sảnh"
                                     x:Name="comboBoxType"
                                       ItemsSource="{Binding LongListToTestComboVirtualization}"
+                                    Foreground="Black"                                    
                                       Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                                     Width="100">
                                     <ComboBox.ItemsPanel>
@@ -143,7 +144,7 @@
                                     VerticalAlignment="Center"
                                     Margin="10,10,20,-18" />
                                 <TextBox
-                                    x:Name="txtAddress"
+                                    x:Name="txtMinPrice"
                                     TabIndex="2"
                                 materialDesign:HintAssist.Hint="Đơn giá bàn tối thiểu"
                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
